added image tag selection to container deployment

--- a/app/views/projects/update/_edit_form_container_registry.html.erb
+++ b/app/views/projects/update/_edit_form_container_registry.html.erb
@@ -13,6 +13,17 @@
 
     <% end %>
 
+    <%= render(FormFieldComponent.new(
+      label: "Image Tag",
+      description: "The tag of the image to deploy (e.g., latest, v1.0.0, latest-cpu)."
+    )) do %>
+      <%= form.text_field(
+        :branch,
+        class: "input input-bordered w-full focus:outline-offset-0",
+        placeholder: "latest",
+      ) %>
+    <% end %>
+
     <%= render(FormFieldComponent.new(label: "Predeploy command")) do %>
       <%= form.text_field :predeploy_command, class: "input input-bordered w-full focus:outline-offset-0 font-mono text-sm" %>
     <% end %>
