improve ui for container registry

--- a/app/views/projects/create/_new_form_container_registry.html.erb
+++ b/app/views/projects/create/_new_form_container_registry.html.erb
@@ -57,6 +57,7 @@
           :branch,
           class: "input input-bordered w-full focus:outline-offset-0",
           placeholder: "latest",
+          value: form.object.branch.presence || "latest",
         ) %>
       <% end %>
 
