--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -25,7 +25,7 @@
         </li>
 
         <!-- Other Accounts Section -->
-        <% other_accounts = current_user.accounts.where.not(id: current_account.id).order(created_at: :desc) %>
+        <% other_accounts = current_user.accounts.where.not(id: current_account.id).order(name: :asc) %>
         <% if other_accounts.any? %>
           <li class="menu-title text-xs opacity-60 px-4 py-2 mt-2">OTHER ORGANIZATIONS</li>
           <% other_accounts.each do |account| %>
