--- a/app/views/add_ons/endpoints/edit.html.erb
+++ b/app/views/add_ons/endpoints/edit.html.erb
@@ -28,14 +28,10 @@
       <%= f.text_field :domains, inputmode: "url", class: "input input-bordered" %>
       <p class="text-sm text-gray-500">Comma separated list of domains to use for this endpoint</p>
     </div>
-    <div class="my-4 alert alert-warning inline-block">
-      Make sure to create an A Record to
-      <pre
-        class="inline font-semibold cursor-pointer"
-        data-controller="clipboard"
-        data-clipboard-text="<%= @ip_address %>">
-        <%= @ip_address %>
-      </pre> for any domain you add here.
+    <div class="my-4 alert alert-warning">
+      <span>Make sure to create an A Record to
+      <code class="font-semibold cursor-pointer" data-controller="clipboard" data-clipboard-text="<%= @ip_address %>"><%= @ip_address %></code>
+      for any domain you add here.</span>
     </div>
 
     <div class="form-footer">
