cli features for homepage

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -9,6 +9,9 @@
       <!-- Deploy section -->
       <%= render "static/landing_page/deploy" %>
 
+      <!-- CLI Demo section -->
+      <%= render "static/landing_page/cli_demo" %>
+
       <!-- Pricing section -->
       <%= render "static/landing_page/pricing" %>
 
