--- a/app/views/providers/new.html.erb
+++ b/app/views/providers/new.html.erb
@@ -32,13 +32,13 @@
             permissions.
           </div>
         <% elsif params[:provider_type] == Provider::BITBUCKET_PROVIDER %>
-          <%= link_to "Create your Bitbucket App Password →", "https://id.atlassian.com/manage-profile/security/api-tokens", target: "_blank", class: "text-sm text-gray-500 " %>
+          <%= link_to "Create your Bitbucket API Token →", "https://id.atlassian.com/manage-profile/security/api-tokens", target: "_blank", class: "text-sm text-gray-500 " %>
           <div class="mt-2">
             Select the
             <% Providers::CreateBitbucketProvider::EXPECTED_SCOPES.each do |scope| %>
               <code class="mx-2 bg-white text-black px-2 py-1 rounded-md"><%= scope %></code>
             <% end %>
-            permissions.
+            scopes.
           </div>
         <% end %>
       </div>
