refactored add ons creation code

--- a/app/views/add_ons/helm/_artifact_hub_fields.html.erb
+++ b/app/views/add_ons/helm/_artifact_hub_fields.html.erb
@@ -1,4 +1,4 @@
-<div data-controller="helm-search">
+<div data-controller="add-ons--artifact-hub-search">
   <div class="form-group">
     <%= form.label "Search for a Helm chart" %>
     <%= form.text_field "metadata][helm_chart][helm_chart.name",
