--- a/app/views/add_ons/helm/_card.html.erb
+++ b/app/views/add_ons/helm/_card.html.erb
@@ -1,8 +1,8 @@
 <div class="relative">
   <div class="card bg-base-100 shadow-xl cursor-pointer overflow-hidden border hover:border-solid border-base-100 hover:border-base-300"
-      data-addon-chart-select-target="card"
+      data-add-ons--chart-select-target="card"
       data-chart-url=""
-      data-action="click->addon-chart-select#selectCard"
+      data-action="click->add-ons--chart-select#selectCard"
       data-card-name="helm_chart">
     <figure class="px-4 pt-8 overflow-visible">
       <div class="w-full flex items-center justify-center">
