--- a/app/views/add_ons/helm/_form.html.erb
+++ b/app/views/add_ons/helm/_form.html.erb
@@ -1,9 +1,9 @@
-<div class="mt-8 card-form hidden card-helm_chart" data-controller="helm-chart-type">
+<div class="mt-8 card-form hidden card-helm_chart" data-controller="add-ons--chart-type">
   <h4 class="text-lg font-bold">Helm Chart Settings</h4>
   <hr class="mt-2 mb-6 border-base-content/10" />
 
   <!-- Hidden field that will be updated based on radio selection -->
-  <%= form.hidden_field :chart_type, value: "helm_chart", data: { 'helm-chart-type-target': 'chartType' } %>
+  <%= form.hidden_field :chart_type, value: "helm_chart", data: { 'add-ons--chart-type-target': 'chartType' } %>
 
   <div class="form-control mt-4">
     <%= render "shared/partials/radio_selector", selected: "helm_chart", options: [
