--- a/app/views/add_ons/helm/_form.html.erb
+++ b/app/views/add_ons/helm/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="mt-8 card-form hidden card-helm_chart" data-controller="add-ons--chart-type">
+<div class="mt-8 card-form hidden card-helm_chart">
   <h4 class="text-lg font-bold">Helm Chart Settings</h4>
   <hr class="mt-2 mb-6 border-base-content/10" />
 
