--- a/app/views/add_ons/processes/index.html.erb
+++ b/app/views/add_ons/processes/index.html.erb
@@ -1,6 +1,5 @@
 <%= add_on_layout(@add_on) do %>
-  <div data-controller="processes">
-    <%= render "projects/processes/connect_modal", cluster: @add_on.cluster %>
+  <div>
     <div class="mb-4">
       <h3 class="text-lg font-medium">Processes</h3>
     </div>
