--- a/app/views/processes/_pods.html.erb
+++ b/app/views/processes/_pods.html.erb
@@ -73,19 +73,10 @@
 
             <div class="font-medium">
               <% if pod.status.phase == "Running" %>
-                <button
-                  class="btn btn-sm btn-outline"
-                  data-action="click->processes#showConnectionInstructions"
-                  data-pod-name="<%= pod.metadata.name %>"
-                  data-namespace="<%= pod.metadata.namespace %>"
-                  data-cluster-name="<%= parent.cluster.name %>"
-                >Connect</button>
+                <%= link_to "Shell", view_model.shell_path, class: "btn btn-sm btn-outline" %>
               <% else %>
                 <div role="tooltip" data-tip="Pod is not running" class="tooltip tooltip-secondary">
-                  <button
-                    disabled
-                    class="btn btn-sm btn-outline btn-disabled"
-                  >Connect</button>
+                  <button disabled class="btn btn-sm btn-outline btn-disabled">Shell</button>
                 </div>
               <% end %>
             </div>
