--- a/app/views/projects/processes/shell.html.erb
+++ b/app/views/projects/processes/shell.html.erb
@@ -4,6 +4,7 @@
     pod_name: @pod_name,
     namespace: @namespace,
     back_path: project_processes_path(@project),
-    project_name: @project.name
+    project_name: @project.name,
+    cluster: @project.cluster
   %>
 <% end %>
