--- a/app/views/add_ons/processes/shell.html.erb
+++ b/app/views/add_ons/processes/shell.html.erb
@@ -3,6 +3,7 @@
     shell_token: @shell_token,
     pod_name: @pod_name,
     namespace: @namespace,
-    back_path: add_on_processes_path(@add_on)
+    back_path: add_on_processes_path(@add_on),
+    cluster: @add_on.cluster
   %>
 <% end %>
