--- a/app/views/projects/create/_new_form_git.html.erb
+++ b/app/views/projects/create/_new_form_git.html.erb
@@ -111,7 +111,7 @@
         <%= form.text_field :predeploy_command, class: "input input-bordered w-full focus:outline-offset-0 font-mono text-sm" %>
       <% end %>
 
-      <% if Flipper.enabled?(:build_configuration, current_account) %>
+      <% if Rails.configuration.build_configuration_enabled || Flipper.enabled?(:build_configuration, current_account) %>
         <%= render(FormFieldComponent.new(
           label: "Build settings",
           description: "Configure where your container images will be built. You can use Kubernetes-based build clouds for faster, scalable builds, or use local Docker for simpler setups."
